# ckb-test-contracts

./: README.md  build.sh  prepare.sh  test.sh
.github/workflows/: ci.yml
c/: prepare.sh  spawn_peak_memory_2m_to_32m.c  spawn_peak_memory_4m_to_32m.c
rust/acceptance-contracts/: Cargo.toml  README.md  capsule.toml
rust/acceptance-contracts/contracts/always_success/: Cargo.toml
rust/acceptance-contracts/contracts/always_success/src/: main.rs
rust/acceptance-contracts/contracts/ckb_get_memory_limit/: Cargo.toml
rust/acceptance-contracts/contracts/ckb_get_memory_limit/src/: main.rs  spawn_get_memory_limit.rs
rust/acceptance-contracts/contracts/load_block_extension/: Cargo.toml
rust/acceptance-contracts/contracts/load_block_extension/src/: load_block_extension.rs
rust/acceptance-contracts/contracts/loop_contract/: Cargo.toml
rust/acceptance-contracts/contracts/loop_contract/src/: entry.rs  error.rs
rust/acceptance-contracts/contracts/rfc49_atomic/: Cargo.toml
rust/acceptance-contracts/contracts/rfc49_atomic/src/: atomic_bool.rs  atomic_demo.rs  atomic_i16.rs  atomic_i32.rs  atomic_i64.rs  atomic_i8.rs  atomic_isize.rs  atomic_ptr.rs  atomic_u16.rs  atomic_u32.rs  atomic_u64.rs  atomic_u8.rs  atomic_usize.rs  get_code.py
rust/acceptance-contracts/contracts/set_content/: Cargo.toml
rust/acceptance-contracts/contracts/set_content/src/: set_content.rs  set_content_data_propagation_to_parent_only.rs  set_content_exceed_length.rs  set_content_insufficient_length.rs  set_content_many_times.rs  set_content_nonzero_exit_no_rollback.rs  set_content_spawn_length_exceeds_array_size_set_array_length.rs  set_content_spawn_length_exceeds_array_size_set_length.rs  set_content_spawn_length_exceeds_array_size_set_max_length.rs  set_content_spawn_length_less_than_array_size_set_array_length.rs  set_content_spawn_length_less_than_array_size_set_length.rs  set_content_without_spawn.rs
rust/acceptance-contracts/contracts/spawn_demo/: Cargo.toml
rust/acceptance-contracts/contracts/spawn_demo/src/: entry.rs  main.rs  spawn_argc_is_u64_max.rs  spawn_argc_not_eq.rs  spawn_argv.rs  spawn_content.rs  spawn_current_cycles.rs  spawn_current_memory.rs  spawn_elf_format_error.rs  spawn_exceeded_max_content_length.rs  spawn_exceeded_max_peak_memory.rs  spawn_exec_memory_limit_le_7.rs  spawn_exec_set_content.rs  spawn_exec_spawn.rs  spawn_fib.rs  spawn_index.rs  spawn_out_of_memory.rs  spawn_query.rs  spawn_recursive.rs  spawn_times.rs  spawn_wrong_memory_limit.rs
rust/acceptance-contracts/tests/: Cargo.toml
rust/acceptance-contracts/tests/src/: lib.rs  test_always_success.rs  test_contract_type.rs  test_loop_contract.rs
rust/spawnDemo/: Cargo.toml  README.md  capsule.toml
rust/spawnDemo/tests/src/: lib.rs
